test_out/cpp_stl_11/make.stderr
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_else.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_else.h: In member function ‘kaitai::kstruct* switch_manual_int_else_t::opcode_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_else.h:120:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_else.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size.h: In member function ‘kaitai::kstruct* switch_manual_int_size_t::chunk_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size.h:108:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_else.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_else.h: In member function ‘kaitai::kstruct* switch_manual_int_size_else_t::chunk_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_else.h:126:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_else.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_eos.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_eos.h: In member function ‘kaitai::kstruct* switch_manual_int_size_eos_t::chunk_body_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_eos.h:136:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_eos.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_str_else.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_str_else.h: In member function ‘kaitai::kstruct* switch_manual_str_else_t::opcode_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_str_else.h:120:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_str_else.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_nested.cpp:4:25: fatal error: cast_nested.h: No such file or directory
 #include <cast_nested.h>
                         ^
compilation terminated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_nested.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_to_imported.cpp:3:30: fatal error: cast_to_imported.h: No such file or directory
 #include <cast_to_imported.h>
                              ^
compilation terminated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_to_imported.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_to_top.cpp:4:25: fatal error: cast_to_top.h: No such file or directory
 #include <cast_to_top.h>
                         ^
compilation terminated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_to_top.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_process_coerce_switch.cpp:4:35: fatal error: process_coerce_switch.h: No such file or directory
 #include <process_coerce_switch.h>
                                   ^
compilation terminated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_process_coerce_switch.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_cast.cpp:3:25: fatal error: switch_cast.h: No such file or directory
 #include <switch_cast.h>
                         ^
compilation terminated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_cast.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_manual_int_else.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_else.h: In member function ‘kaitai::kstruct* switch_manual_int_else_t::opcode_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_else.h:120:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_manual_int_else.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_manual_int_size.cpp:3:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size.h: In member function ‘kaitai::kstruct* switch_manual_int_size_t::chunk_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size.h:108:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_manual_int_size.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_manual_int_size_else.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_else.h: In member function ‘kaitai::kstruct* switch_manual_int_size_else_t::chunk_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_else.h:126:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_manual_int_size_else.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_manual_int_size_eos.cpp:3:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_eos.h: In member function ‘kaitai::kstruct* switch_manual_int_size_eos_t::chunk_body_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_int_size_eos.h:136:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_manual_int_size_eos.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_manual_str_else.cpp:4:0:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_str_else.h: In member function ‘kaitai::kstruct* switch_manual_str_else_t::opcode_t::body() const’:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_manual_str_else.h:120:48: error: cannot convert ‘const std::unique_ptr<kaitai::kstruct>’ to ‘kaitai::kstruct*’ in return
         kaitai::kstruct* body() const { return m_body; }
                                                ^
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_manual_str_else.cpp.o] Error 1
In file included from /usr/include/boost/test/unit_test.hpp:19:0,
                 from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_repeat_expr.cpp:1:
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_repeat_expr.cpp: In member function ‘void test_switch_repeat_expr::test_method()’:
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_repeat_expr.cpp:16:82: error: invalid static_cast from type ‘__gnu_cxx::__alloc_traits<std::allocator<std::unique_ptr<kaitai::kstruct> > >::value_type {aka std::unique_ptr<kaitai::kstruct>}’ to type ‘switch_repeat_expr_t::one_t*’
     BOOST_CHECK_EQUAL((static_cast<switch_repeat_expr_t::one_t*>(r->body()->at(0)))->first(), std::string("Stuff\0Me\0", 9));
                                                                                  ^
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_repeat_expr.cpp.o] Error 1
make[2]: Target `CMakeFiles/ks_tests.dir/build' not remade because of errors.
make[1]: *** [CMakeFiles/ks_tests.dir/all] Error 2
make[1]: Target `all' not remade because of errors.
make: *** [all] Error 2
make: Target `default_target' not remade because of errors.
